--- a/ssm_demo/src/main/webapp/login/aa.html
+++ b/ssm_demo/src/main/webapp/login/aa.html
@@ -9,7 +9,7 @@
 <body>
 <!-- 
 method="post"  这个很重要 -->
-<form action="/ssm3/login/login.do" method="post">
+<form action="/ssm_demo/login/login.do" method="post">
   <input type="text" name="username"><br>
     <input type="password" name="password"><br>
     <input type="submit" value="提交">
