--- a/ssm_demo/src/main/webapp/login/bb.html
+++ b/ssm_demo/src/main/webapp/login/bb.html
@@ -36,7 +36,7 @@ window.onload=function(){
 function aa(){
 	$.ajax({
 		async:false,
-		url:"/ssm3/test/aa.do",
+		url:"/ssm_demo/test/aa.do",
 		type:"get",
 		success:function(msg){
 			$("body").find("h2").last().append(msg);
