--- a/ssm_demo/src/main/webapp/user/fileTest.html
+++ b/ssm_demo/src/main/webapp/user/fileTest.html
@@ -53,7 +53,7 @@ $(function(){
 })
 
 function importHisArchiveFile(){
-	ajaxModal("/ssm3/test/uploadDemo.do","aa")
+	ajaxModal("/ssm_demo3/test/uploadDemo.do","aa")
 }
 /**
  *文件的ajax的请求
@@ -121,7 +121,7 @@ function teDemo(){
 	
 	$.ajax({
 		type:"get",
-		url:"/ssm3/user/testDemo.do",
+		url:"/ssm_demo3/user/testDemo.do",
 		success:function(){
 			alert(11)
 		},
