饿汉式 延迟加载

--- a/ssm_demo/src/main/webapp/index/index.html
+++ b/ssm_demo/src/main/webapp/index/index.html
@@ -112,8 +112,7 @@
         {name:"精确业务 ",src:"",pageId:"",children:[
                                                  
             {name:"样式按钮",src:"../radio/radio.html",pageId:""},
-            {name:"消息发布",src:"../publish/publish_manager.html",pageId:""},
-            {name:"轮播图管理",src:"../picture/picture.html",pageId:""}
+            {name:"消息发布",src:"../publish/publish_manager.html",pageId:""}
         ]},
         {name:"用户基本信息 ",src:"",pageId:"",children:[
         {name:"用户管理",src:"../user/user_manager.html",pageId:""}
