--- a/ssm_demo/src/main/webapp/index/index.html
+++ b/ssm_demo/src/main/webapp/index/index.html
@@ -117,7 +117,10 @@
         {name:"用户基本信息 ",src:"",pageId:"",children:[
         {name:"用户管理",src:"../user/user_manager.html",pageId:""}
         
-        ]}
+        ]},
+        {name:"标签基本信息 ",src:"",pageId:"",children:[
+         {name:"标签管理",src:"/mark/mark_manager.jsp",pageId:""}
+          ]}
     ]
     
     $(function() {
