--- a/ssm_demo/src/main/webapp/static/html/front.html
+++ b/ssm_demo/src/main/webapp/static/html/front.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>何建文个人博客</title>
+<title>Fairy Tail个人博客</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="css/base.css" rel="stylesheet">
-<link href="css/index.css" rel="stylesheet">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/sliders.js"></script>
+<link href="../css/base.css" rel="stylesheet">
+<link href="../css/index.css" rel="stylesheet">
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/sliders.js"></script>
 <!--[if lt IE 9]>
-<script src="js/modernizr.js"></script>
+<script src="../js/modernizr.js"></script>
 <![endif]-->
 <!-- 返回顶部调用 begin -->
 
@@ -18,19 +18,19 @@
 </head>
 <body>
 <header>
-  <div class="logo f_l"> <a href="/"><img src="images/logo.png"></a> </div>
+  <div class="logo f_l"> <a href="/"><img src="../images/logo.png"></a> </div>
   <nav id="topnav" class="f_r">
     <ul>
       <a href="index.html" target="_blank">首页</a> <a href="http://www.yangqq.com/about.html" target="_blank">关于我</a> <a href="http://www.yangqq.com/news/" target="_blank">文章</a> <a href="http://www.yangqq.com/newstalk/" target="_blank">心情</a> <a href="http://www.yangqq.com/download/" target="_blank">相册</a> <a href="http://www.yangqq.com/jstt/" target="_blank">留言</a>
     </ul>
-    <script src="js/nav.js"></script> 
+    <script src="../js/nav.js"></script> 
   </nav>
 </header>
 <article>
   <div class="l_box f_l">
     <div class="banner">
       <div id="slide-holder">
-        <div id="slide-runner"> <a href="/" target="_blank"><img id="slide-img-1" src="images/a1.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-2" src="images/a2.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-3" src="images/a3.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-4" src="images/a4.jpg"  alt="" /></a>
+        <div id="slide-runner"> <a href="/" target="_blank"><img id="slide-img-1" src="../images/a1.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-2" src="../images/a2.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-3" src="../images/a3.jpg"  alt="" /></a> <a href="/" target="_blank"><img id="slide-img-4" src="../images/a4.jpg"  alt="" /></a>
           <div id="slide-controls">
             <p id="slide-client" class="text"><strong></strong><span></span></p>
             <p id="slide-desc" class="text"></p>
@@ -72,7 +72,7 @@
     <div class="topnews">
       <h2><span><a href="/" target="_blank">栏目标题</a><a href="/" target="_blank">栏目标题</a><a href="/" target="_blank">栏目标题</a></span><b>文章</b>推荐</h2>
       <div class="blogs">
-        <figure><img src="images/01.jpg"></figure>
+        <figure><img src="../images/01.jpg"></figure>
         <ul>
           <h3><a href="/">住在手机里的朋友</a></h3>
           <p>通信时代，无论是初次相见还是老友重逢，交换联系方式，常常是彼此交换名片，然后郑重或是出于礼貌用手机记下对方的电话号码。在快节奏的生活里，我们不知不觉中就成为住在别人手机里的朋友。又因某些意外，变成了别人手机里匆忙的过客，这种快餐式的友谊 ...</p>
@@ -80,7 +80,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/02.jpg"></figure>
+        <figure><img src="../images/02.jpg"></figure>
         <ul>
           <h3><a href="/">教你怎样用欠费手机拨打电话</a></h3>
           <p>初次相识的喜悦，让你觉得似乎找到了知音。于是，对于投缘的人，开始了较频繁的交往。渐渐地，初识的喜悦退尽，接下来就是仅仅保持着联系，平淡到偶尔在节假曰发短信互致问候...</p>
@@ -88,7 +88,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/03.jpg"></figure>
+        <figure><img src="../images/03.jpg"></figure>
         <ul>
           <h3><a href="/">原来以为，一个人的勇敢是，删掉他的手机号码...</a></h3>
           <p>原来以为，一个人的勇敢是，删掉他的手机号码、QQ号码等等一切，努力和他保持距离。等着有一天，习惯不想念他，习惯他不在身边,习惯时间把他在我记忆里的身影磨蚀干净... </p>
@@ -96,7 +96,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/04.jpg"></figure>
+        <figure><img src="../images/04.jpg"></figure>
         <ul>
           <h3><a href="/">手机的16个惊人小秘密，据说99.999%的人都不知</a></h3>
           <p>引导语：知道么，手机有备用电池，手机拨号码12593+电话号码=陷阱……手机具有很多你不知道的小秘密，说出来一定很惊奇！不信的话就来看看吧！...</p>
@@ -104,7 +104,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/05.jpg"></figure>
+        <figure><img src="../images/05.jpg"></figure>
         <ul>
           <h3><a href="/">你面对的是生活而不是手机</a></h3>
           <p>每一次与别人吃饭，总会有人会拿出手机。以为他们在打电话或者有紧急的短信，但用余光瞟了一眼之后发现无非就两件事：1、看小说，2、上人人或者QQ...</p>
@@ -112,7 +112,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/06.jpg"></figure>
+        <figure><img src="../images/06.jpg"></figure>
         <ul>
           <h3><a href="/">豪雅手机正式发布! 在法国全手工打造的奢侈品</a></h3>
           <p>现在跨界联姻，时尚、汽车以及运动品牌联合手机制造商联合发布手机产品在行业里已经不再新鲜，上周我们给大家报道过著名手表制造商瑞士泰格·豪雅（Tag Heuer） 联合法国的手机制造商Modelabs发布的一款奢华手机的部分谍照，而近日该手机终于被正式发布了...</p>
@@ -120,7 +120,7 @@
         </ul>
       </div>
       <div class="blogs">
-        <figure><img src="images/04.jpg"></figure>
+        <figure><img src="../images/04.jpg"></figure>
         <ul>
           <h3><a href="/">手机的16个惊人小秘密，据说99.999%的人都不知</a></h3>
           <p>引导语：知道么，手机有备用电池，手机拨号码12593+电话号码=陷阱……手机具有很多你不知道的小秘密，说出来一定很惊奇！不信的话就来看看吧！...</p>
@@ -142,7 +142,7 @@
       </div>
     </div>
     <!--tit01 end-->
-    <div class="ad300x100"> <img src="images/ad300x100.jpg"> </div>
+    <div class="ad300x100"> <img src="../images/ad300x100.jpg"> </div>
     <div class="moreSelect" id="lp_right_select"> 
       <script>
 window.onload = function ()
@@ -211,43 +211,47 @@ window.onload = function ()
     <div class="cloud">
       <h3>标签云</h3>
       <ul>
-        <li><a href="/">个人博客</a></li>
-        <li><a href="/">web开发</a></li>
-        <li><a href="/">前端设计</a></li>
-        <li><a href="/">Html</a></li>
-        <li><a href="/">CSS3</a></li>
-        <li><a href="/">Html5+css3</a></li>
-        <li><a href="/">百度</a></li>
-        <li><a href="/">Javasript</a></li>
-        <li><a href="/">web开发</a></li>
-        <li><a href="/">前端设计</a></li>
-        <li><a href="/">Html</a></li>
-        <li><a href="/">CSS3</a></li>
-        <li><a href="/">Html5+css3</a></li>
-        <li><a href="/">百度</a></li>
+      
+               <li><a href="/" id="e1c8b0b48f764884834ebb663be3d47f">spring实战</a></li>
+               <li><a href="/" id="c8e016f380624e1ea9d314f41b71102f">通用服务</a></li>
+               <li><a href="/" id="08363448dbfd4475a11ea4f5920482a0">自由飞翔</a></li>
+               <li><a href="/" id="0addc14a632b4a7ebe802d495cf5d135">Activity</a></li>
+               <li><a href="/" id="4837a50782c24d5c883da1d19f7623cf">Shiro</a></li>
+               <li><a href="/" id="aa115dd121e04bb49c5ff22b68887be9">Redis</a></li>
+               <li><a href="/" id="42770af4e1114b17abbedc032797be36">Jquery</a></li>
+               <li><a href="/" id="def35cd0c591476a9d0dc12d1c4d5b7b">Mybatis</a></li>
+               <li><a href="/" id="f5d6bf760ce8475fb3d4463097d1401d">Spring</a></li>
+               <li><a href="/" id="77f01da48e18490e9caf51ddb448bdeb">小米</a></li>
+               <li><a href="/" id="29102367b5064300aa4deb9a9b7ee8ee">百度</a></li>
+               <li><a href="/" id="250cddd97ca940829d891897f3192b39">HTML5+CSS3</a></li>
+               <li><a href="/" id="a6a1dcce20e94165aac9e3ea927c34fe">HTML</a></li>
+               <li><a href="/" id="115d95c3f55a4c65b206febf1464c93d">前端设计</a></li>
+               <li><a href="/" id="40b896f3c21a4829b90b3001c3c49f86">web开发</a></li>
+               <li><a href="/" id="51b31b4ecd834ea6a57e457499c16451">自定义标签</a></li>
+       
       </ul>
     </div>
     <div class="tuwen">
       <h3>图文推荐</h3>
       <ul>
-        <li><a href="/"><img src="images/01.jpg"><b>住在手机里的朋友</b></a>
+        <li><a href="/"><img src="../images/01.jpg"><b>住在手机里的朋友</b></a>
           <p><span class="tulanmu"><a href="/">手机配件</a></span><span class="tutime">2015-02-15</span></p>
         </li>
-        <li><a href="/"><img src="images/02.jpg"><b>教你怎样用欠费手机拨打电话</b></a>
+        <li><a href="/"><img src="../images/02.jpg"><b>教你怎样用欠费手机拨打电话</b></a>
           <p><span class="tulanmu"><a href="/">手机配件</a></span><span class="tutime">2015-02-15</span></p>
         </li>
-        <li><a href="/" title="手机的16个惊人小秘密，据说99.999%的人都不知"><img src="images/03.jpg"><b>手机的16个惊人小秘密，据说...</b></a>
+        <li><a href="/" title="手机的16个惊人小秘密，据说99.999%的人都不知"><img src="../images/03.jpg"><b>手机的16个惊人小秘密，据说...</b></a>
           <p><span class="tulanmu"><a href="/">手机配件</a></span><span class="tutime">2015-02-15</span></p>
         </li>
-        <li><a href="/"><img src="images/06.jpg"><b>住在手机里的朋友</b></a>
+        <li><a href="/"><img src="../images/06.jpg"><b>住在手机里的朋友</b></a>
           <p><span class="tulanmu"><a href="/">手机配件</a></span><span class="tutime">2015-02-15</span></p>
         </li>
-        <li><a href="/"><img src="images/04.jpg"><b>教你怎样用欠费手机拨打电话</b></a>
+        <li><a href="/"><img src="../images/04.jpg"><b>教你怎样用欠费手机拨打电话</b></a>
           <p><span class="tulanmu"><a href="/">手机配件</a></span><span class="tutime">2015-02-15</span></p>
         </li>
       </ul>
     </div>
-    <div class="ad"> <img src="images/03.jpg"> </div>
+    <div class="ad"> <img src="../images/03.jpg"> </div>
     <div class="links">
       <h3><span>[<a href="/">申请友情链接</a>]</span>友情链接</h3>
       <ul>
