--- a/ssm_demo/src/main/webapp/index/index.html
+++ b/ssm_demo/src/main/webapp/index/index.html
@@ -51,8 +51,8 @@
             <i class="fa fa-chevron-down"></i>
         </a>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li class="dropdown-li" role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-user mr5"></i>个人中心</a></li>
-            <li class="dropdown-li" role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="fa fa-sign-out mr5"></i>退出</a></li>
+            <li class="dropdown-li" role="presentation"><a role="menuitem" tabindex="-1" href="javascript:void(0);"><i class="fa fa-user mr5"></i>个人中心</a></li>
+            <li class="dropdown-li" role="presentation"><a role="menuitem" tabindex="-1" href="javascript:void(0);"><i class="fa fa-sign-out mr5"></i>退出</a></li>
         </ul>
     </div>
 </header>
