--- a/ssm_demo/src/main/webapp/login/login.html
+++ b/ssm_demo/src/main/webapp/login/login.html
@@ -264,12 +264,12 @@ height: 40px;
 	<h3>亲哈社区欢迎你</h3>
 		<div class="input_outer">
 			<span class="u_user"></span>
-			<input name="logname" class="text" id="account" placeholder="输入用户名登录" style="color: #FFFFFF !important" type="text">
+			<input name="username" class="text" id="account" placeholder="输入用户名登录" style="color: #FFFFFF !important" type="text">
 		    <span class="show"></span>
 		</div>
 		<div class="input_outer">
 			<span class="us_uer"></span>
-			<input name="logpass" class="text" id="password"placeholder="输入密码" style="color: #FFFFFF !important; position:absolute; z-index:100;"  type="password">
+			<input name="password" class="text" id="password"placeholder="输入密码" style="color: #FFFFFF !important; position:absolute; z-index:100;"  type="password">
 		    <span class="show"></span>
 		</div>
 		<div class="code">
