引入bootstrap.min.js 实现下拉菜单

--- a/ssm_demo/src/main/webapp/index/index.html
+++ b/ssm_demo/src/main/webapp/index/index.html
@@ -14,12 +14,13 @@
     <link rel="stylesheet" href="../css/groups.css"><!--组件样式-->
     <link rel="stylesheet" href="../css/appmenu.css"><!--应用菜单样式-->
     <link rel="stylesheet" href="../css/business.css"><!--应用菜单样式-->
-    <script type="text/javascript" src="../js/jquery-1.8.3.min.js"></script><!--jquery版本-->
+    <script type="text/javascript" src="../js/jquery-2.0.2.min.js"></script><!--jquery版本-->
     <script type="text/javascript" src="../js/sideBar.js"></script><!--左侧APP快捷入口-->
     <script src="../js/left-menu.js"></script><!--应用菜单-->
     <script src="../js/resize.js"></script><!--页面自适应-->
     <script src="../js/search-more.js"></script><!--更多查询条件-->
     <script src="../js/My97DatePicker/WdatePicker.js" type="text/javascript"></script><!--时间控件-->
+    <script src="../js/common/bootstrap.min.js" type="text/javascript"></script>
 	<style>
 		body{overflow:hidden}
 	</style>
