--- a/ssm_demo/src/main/webapp/user/file.html
+++ b/ssm_demo/src/main/webapp/user/file.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="../js/user/user_inport.js"></script>
 </head>
 <body>
-	<form id="uploadForm" action="/ssm_demo/user/batchUpload.do" method="POST" class="drfile" enctype='multipart/form-data'
+	<form id="uploadForm" action="/user/batchUpload.do" method="POST" class="drfile" enctype='multipart/form-data'
 		name="uploadForm">
 		<input type="file" name="files">
 		<a class="bUbuttons-03" id="drfile" ><i
